// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`combocid.sql > line 1 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 94,
            "relname": "combocidtest",
            "relpersistence": "t",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "foobar",
                "is_local": true,
                "location": 108,
                "typeName": {
                  "location": 115,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 5 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 7 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 66,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 94,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 86,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 86,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 10 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 11 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 12 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 13 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 14 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 15 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 16 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 17 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 18 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 19 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 35,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 21 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 2,
                          },
                          "location": 34,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 22 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "combocidtest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "cmin",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 19,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 19,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 24 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_SAVEPOINT",
          "savepoint_name": "s1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 26 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 9,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "targetList": [
            {
              "ResTarget": {
                "location": 26,
                "name": "foobar",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "foobar",
                            },
                          },
                        ],
                        "location": 35,
                      },
                    },
                    "location": 42,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 10,
                        },
                        "location": 44,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 28 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 68,
                "relname": "combocidtest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 51,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 51,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 56,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "cmin",
                        },
                      },
                    ],
                    "location": 56,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 61,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 61,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 31 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK_TO",
          "savepoint_name": "s1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 33 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 93,
                "relname": "combocidtest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 76,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 76,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 81,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "cmin",
                        },
                      },
                    ],
                    "location": 81,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 86,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 86,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 36 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_COMMIT",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 38 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 90,
                "relname": "combocidtest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 73,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 73,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 78,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "cmin",
                        },
                      },
                    ],
                    "location": 78,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 83,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 83,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 41 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 44 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 333,
                          },
                          "location": 35,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 46 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeclareCursorStmt": {
          "options": 256,
          "portalname": "c",
          "query": {
            "SelectStmt": {
              "fromClause": [
                {
                  "RangeVar": {
                    "inh": true,
                    "location": 47,
                    "relname": "combocidtest",
                    "relpersistence": "p",
                  },
                },
              ],
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 30,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "ctid",
                            },
                          },
                        ],
                        "location": 30,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 35,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "cmin",
                            },
                          },
                        ],
                        "location": 35,
                      },
                    },
                  },
                },
                {
                  "ResTarget": {
                    "location": 40,
                    "val": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "A_Star": {},
                          },
                        ],
                        "location": 40,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 48 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DeleteStmt": {
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 50 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "FetchStmt": {
          "direction": "FETCH_FORWARD",
          "howMany": 9223372036854776000,
          "portalname": "c",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 52 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 54 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "combocidtest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "cmin",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 19,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 19,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 56 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 59 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 66,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 94,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 86,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 86,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 62 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 63 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 64 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 65 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 66 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 67 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 68 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 69 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 70 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitCount": {
                "A_Const": {
                  "ival": {},
                  "location": 41,
                },
              },
              "limitOption": "LIMIT_OPTION_COUNT",
              "op": "SETOP_NONE",
              "targetList": [
                {
                  "ResTarget": {
                    "location": 33,
                    "val": {
                      "A_Const": {
                        "ival": {
                          "ival": 1,
                        },
                        "location": 33,
                      },
                    },
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 71 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 14,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 444,
                          },
                          "location": 35,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 73 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "combocidtest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "cmin",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 19,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 19,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 75 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_SAVEPOINT",
          "savepoint_name": "s1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 77 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 54,
                "relname": "combocidtest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "lockingClause": [
            {
              "LockingClause": {
                "strength": "LCS_FORUPDATE",
                "waitPolicy": "LockWaitBlock",
              },
            },
          ],
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 37,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 37,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 42,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "cmin",
                        },
                      },
                    ],
                    "location": 42,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 47,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 47,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 80 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 25,
                "relname": "combocidtest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 13,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "cmin",
                        },
                      },
                    ],
                    "location": 13,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 18,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 18,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 81 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 26,
            "relname": "combocidtest",
            "relpersistence": "p",
          },
          "targetList": [
            {
              "ResTarget": {
                "location": 43,
                "name": "foobar",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "foobar",
                            },
                          },
                        ],
                        "location": 52,
                      },
                    },
                    "location": 59,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 10,
                        },
                        "location": 61,
                      },
                    },
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 84 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "combocidtest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "cmin",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 19,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 19,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 86 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK_TO",
          "savepoint_name": "s1",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 88 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "combocidtest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "cmin",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 19,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 19,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 90 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_COMMIT",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 92 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 26,
                "relname": "combocidtest",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 9,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "ctid",
                        },
                      },
                    ],
                    "location": 9,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 14,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "String": {
                          "sval": "cmin",
                        },
                      },
                    ],
                    "location": 14,
                  },
                },
              },
            },
            {
              "ResTarget": {
                "location": 19,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 19,
                  },
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 94 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "CreateStmt": {
          "if_not_exists": true,
          "oncommit": "ONCOMMIT_NOOP",
          "relation": {
            "inh": true,
            "location": 127,
            "relname": "testcase",
            "relpersistence": "p",
          },
          "tableElts": [
            {
              "ColumnDef": {
                "colname": "id",
                "constraints": [
                  {
                    "Constraint": {
                      "contype": "CONSTR_PRIMARY",
                      "location": 145,
                    },
                  },
                ],
                "is_local": true,
                "location": 138,
                "typeName": {
                  "location": 141,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "int4",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
            {
              "ColumnDef": {
                "colname": "balance",
                "is_local": true,
                "location": 159,
                "typeName": {
                  "location": 167,
                  "names": [
                    {
                      "String": {
                        "sval": "pg_catalog",
                      },
                    },
                    {
                      "String": {
                        "sval": "numeric",
                      },
                    },
                  ],
                  "typemod": -1,
                },
              },
            },
          ],
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 101 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "InsertStmt": {
          "override": "OVERRIDING_NOT_SET",
          "relation": {
            "inh": true,
            "location": 13,
            "relname": "testcase",
            "relpersistence": "p",
          },
          "selectStmt": {
            "SelectStmt": {
              "limitOption": "LIMIT_OPTION_DEFAULT",
              "op": "SETOP_NONE",
              "valuesLists": [
                {
                  "List": {
                    "items": [
                      {
                        "A_Const": {
                          "ival": {
                            "ival": 1,
                          },
                          "location": 30,
                        },
                      },
                      {
                        "A_Const": {
                          "ival": {},
                          "location": 33,
                        },
                      },
                    ],
                  },
                },
              ],
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 102 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_BEGIN",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 103 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 15,
                "relname": "testcase",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "lockingClause": [
            {
              "LockingClause": {
                "strength": "LCS_FORUPDATE",
                "waitPolicy": "LockWaitBlock",
              },
            },
          ],
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 8,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 8,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "testcase",
                      },
                    },
                    {
                      "String": {
                        "sval": "id",
                      },
                    },
                  ],
                  "location": 30,
                },
              },
              "location": 42,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 44,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 104 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 8,
            "relname": "testcase",
            "relpersistence": "p",
          },
          "targetList": [
            {
              "ResTarget": {
                "location": 21,
                "name": "balance",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "balance",
                            },
                          },
                        ],
                        "location": 31,
                      },
                    },
                    "location": 39,
                    "name": [
                      {
                        "String": {
                          "sval": "+",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 400,
                        },
                        "location": 41,
                      },
                    },
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "id",
                      },
                    },
                  ],
                  "location": 51,
                },
              },
              "location": 53,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 54,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 105 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_SAVEPOINT",
          "savepoint_name": "subxact",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 106 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "UpdateStmt": {
          "relation": {
            "inh": true,
            "location": 8,
            "relname": "testcase",
            "relpersistence": "p",
          },
          "targetList": [
            {
              "ResTarget": {
                "location": 21,
                "name": "balance",
                "val": {
                  "A_Expr": {
                    "kind": "AEXPR_OP",
                    "lexpr": {
                      "ColumnRef": {
                        "fields": [
                          {
                            "String": {
                              "sval": "balance",
                            },
                          },
                        ],
                        "location": 31,
                      },
                    },
                    "location": 39,
                    "name": [
                      {
                        "String": {
                          "sval": "-",
                        },
                      },
                    ],
                    "rexpr": {
                      "A_Const": {
                        "ival": {
                          "ival": 100,
                        },
                        "location": 41,
                      },
                    },
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "id",
                      },
                    },
                  ],
                  "location": 51,
                },
              },
              "location": 53,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 54,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 107 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK_TO",
          "savepoint_name": "subxact",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 108 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "SelectStmt": {
          "fromClause": [
            {
              "RangeVar": {
                "inh": true,
                "location": 42,
                "relname": "testcase",
                "relpersistence": "p",
              },
            },
          ],
          "limitOption": "LIMIT_OPTION_DEFAULT",
          "lockingClause": [
            {
              "LockingClause": {
                "strength": "LCS_FORUPDATE",
                "waitPolicy": "LockWaitBlock",
              },
            },
          ],
          "op": "SETOP_NONE",
          "targetList": [
            {
              "ResTarget": {
                "location": 35,
                "val": {
                  "ColumnRef": {
                    "fields": [
                      {
                        "A_Star": {},
                      },
                    ],
                    "location": 35,
                  },
                },
              },
            },
          ],
          "whereClause": {
            "A_Expr": {
              "kind": "AEXPR_OP",
              "lexpr": {
                "ColumnRef": {
                  "fields": [
                    {
                      "String": {
                        "sval": "id",
                      },
                    },
                  ],
                  "location": 57,
                },
              },
              "location": 60,
              "name": [
                {
                  "String": {
                    "sval": "=",
                  },
                },
              ],
              "rexpr": {
                "A_Const": {
                  "ival": {
                    "ival": 1,
                  },
                  "location": 62,
                },
              },
            },
          },
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 110 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "TransactionStmt": {
          "kind": "TRANS_STMT_ROLLBACK",
        },
      },
    },
  ],
  "version": 160001,
}
`;

exports[`combocid.sql > line 111 1`] = `
{
  "stmts": [
    {
      "stmt": {
        "DropStmt": {
          "behavior": "DROP_RESTRICT",
          "objects": [
            {
              "List": {
                "items": [
                  {
                    "String": {
                      "sval": "testcase",
                    },
                  },
                ],
              },
            },
          ],
          "removeType": "OBJECT_TABLE",
        },
      },
    },
  ],
  "version": 160001,
}
`;
